crates/parser/tests/snapshots/statements/valid/0012.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE measurement_y2008m01 PARTITION OF measurement\n    FOR VALUES FROM ('2008-01-01') TO ('2008-02-01')\n    WITH (parallel_workers = 4)\n    TABLESPACE fasttablespace;\n"
---
CreateStmt@0..175
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  Ident@13..33 "measurement_y2008m01"
  Whitespace@33..34 " "
  Partition@34..43 "PARTITION"
  Whitespace@43..44 " "
  Of@44..46 "OF"
  Whitespace@46..47 " "
  Ident@47..58 "measurement"
  Newline@58..59 "\n"
  Whitespace@59..63 "    "
  For@63..66 "FOR"
  Whitespace@66..67 " "
  Values@67..73 "VALUES"
  Whitespace@73..74 " "
  From@74..78 "FROM"
  Whitespace@78..79 " "
  Ascii40@79..80 "("
  Sconst@80..92 "'2008-01-01'"
  Ascii41@92..93 ")"
  Whitespace@93..94 " "
  To@94..96 "TO"
  Whitespace@96..97 " "
  Ascii40@97..98 "("
  Sconst@98..110 "'2008-02-01'"
  Ascii41@110..111 ")"
  Newline@111..112 "\n"
  Whitespace@112..116 "    "
  With@116..120 "WITH"
  Whitespace@120..121 " "
  Ascii40@121..122 "("
  Ident@122..138 "parallel_workers"
  Whitespace@138..139 " "
  Ascii61@139..140 "="
  Whitespace@140..141 " "
  Iconst@141..142 "4"
  Ascii41@142..143 ")"
  Newline@143..144 "\n"
  Whitespace@144..148 "    "
  Tablespace@148..158 "TABLESPACE"
  Whitespace@158..159 " "
  Ident@159..173 "fasttablespace"
  Ascii59@173..174 ";"
  Newline@174..175 "\n"

