crates/parser/tests/snapshots/statements/valid/0012@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE measurement_y2008m01 PARTITION OF measurement\n    FOR VALUES FROM ('2008-01-01') TO ('2008-02-01')\n    WITH (parallel_workers = 4)\n    TABLESPACE fasttablespace;"
---
Parse {
    cst: SourceFile@0..174
      CreateStmt@0..174
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Table@7..12 "TABLE"
        Whitespace@12..13 " "
        RangeVar@13..33
          Ident@13..33 "measurement_y2008m01"
        Whitespace@33..34 " "
        Partition@34..43 "PARTITION"
        Whitespace@43..44 " "
        Of@44..46 "OF"
        Whitespace@46..47 " "
        RangeVar@47..58
          Ident@47..58 "measurement"
        Newline@58..59 "\n"
        Whitespace@59..63 "    "
        For@63..66 "FOR"
        Whitespace@66..67 " "
        Values@67..73 "VALUES"
        Whitespace@73..74 " "
        PartitionBoundSpec@74..110
          From@74..78 "FROM"
          Whitespace@78..79 " "
          Ascii40@79..80 "("
          AConst@80..92
            Sconst@80..92 "'2008-01-01'"
          Ascii41@92..93 ")"
          Whitespace@93..94 " "
          To@94..96 "TO"
          Whitespace@96..97 " "
          Ascii40@97..98 "("
          AConst@98..110
            Sconst@98..110 "'2008-02-01'"
        Ascii41@110..111 ")"
        Newline@111..112 "\n"
        Whitespace@112..116 "    "
        With@116..120 "WITH"
        Whitespace@120..121 " "
        Ascii40@121..122 "("
        DefElem@122..142
          Ident@122..138 "parallel_workers"
          Whitespace@138..139 " "
          Ascii61@139..140 "="
          Whitespace@140..141 " "
          Iconst@141..142 "4"
        Ascii41@142..143 ")"
        Newline@143..144 "\n"
        Whitespace@144..148 "    "
        Tablespace@148..158 "TABLESPACE"
        Whitespace@158..159 " "
        Ident@159..173 "fasttablespace"
        Ascii59@173..174 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "measurement_y2008m01",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 13,
                        },
                    ),
                    table_elts: [],
                    inh_relations: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "measurement",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 47,
                                    },
                                ),
                            ),
                        },
                    ],
                    partbound: Some(
                        PartitionBoundSpec {
                            strategy: "r",
                            is_default: false,
                            modulus: 0,
                            remainder: 0,
                            listdatums: [],
                            lowerdatums: [
                                Node {
                                    node: Some(
                                        AConst(
                                            AConst {
                                                isnull: false,
                                                location: 80,
                                                val: Some(
                                                    Sval(
                                                        String {
                                                            sval: "2008-01-01",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ],
                            upperdatums: [
                                Node {
                                    node: Some(
                                        AConst(
                                            AConst {
                                                isnull: false,
                                                location: 98,
                                                val: Some(
                                                    Sval(
                                                        String {
                                                            sval: "2008-02-01",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ],
                            location: 74,
                        },
                    ),
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "parallel_workers",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    Integer(
                                                        Integer {
                                                            ival: 4,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 122,
                                    },
                                ),
                            ),
                        },
                    ],
                    oncommit: OncommitNoop,
                    tablespacename: "fasttablespace",
                    access_method: "",
                    if_not_exists: false,
                },
            ),
            range: 0..173,
        },
    ],
}
