crates/parser/tests/snapshots/statements/valid/0013.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "UPDATE weather\n    SET temp_hi = temp_hi - 2,  temp_lo = temp_lo - 2\n    WHERE date > '1994-11-28';\n"
---
UpdateStmt@0..99
  Update@0..6 "UPDATE"
  Whitespace@6..7 " "
  RangeVar@7..14
    Ident@7..14 "weather"
  Newline@14..15 "\n"
  Whitespace@15..19 "    "
  Set@19..22 "SET"
  Whitespace@22..23 " "
  ResTarget@23..44
    Ident@23..30 "temp_hi"
    Whitespace@30..31 " "
    Ascii61@31..32 "="
    Whitespace@32..33 " "
    AExpr@33..44
      ColumnRef@33..40
        String@33..40
          Ident@33..40 "temp_hi"
      Whitespace@40..41 " "
      String@41..42
        Ascii45@41..42 "-"
      Whitespace@42..43 " "
      AConst@43..44
        Integer@43..44
          Iconst@43..44 "2"
  Ascii44@44..45 ","
  Whitespace@45..47 "  "
  ResTarget@47..68
    Ident@47..54 "temp_lo"
    Whitespace@54..55 " "
    Ascii61@55..56 "="
    Whitespace@56..57 " "
    AExpr@57..68
      ColumnRef@57..64
        String@57..64
          Ident@57..64 "temp_lo"
      Whitespace@64..65 " "
      String@65..66
        Ascii45@65..66 "-"
      Whitespace@66..67 " "
      AConst@67..68
        Integer@67..68
          Iconst@67..68 "2"
  Newline@68..69 "\n"
  Whitespace@69..73 "    "
  Where@73..78 "WHERE"
  Whitespace@78..79 " "
  AExpr@79..98
    ColumnRef@79..83
      String@79..83
        Ident@79..83 "date"
    Whitespace@83..84 " "
    String@84..85
      Ascii62@84..85 ">"
    Whitespace@85..86 " "
    AConst@86..98
      String@86..98
        Sconst@86..98 "'1994-11-28'"
  Ascii59@98..99 ";"

