crates/parser/tests/snapshots/statements/valid/0015.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "SELECT\n    count(*) AS unfiltered,\n    count(*) FILTER (WHERE i < 5) AS filtered\nFROM generate_series(1,10) AS s(i);\n"
---
SelectStmt@0..116
  Select@0..6 "SELECT"
  Newline@6..7 "\n"
  Whitespace@7..11 "    "
  ResTarget@11..33
    FuncCall@11..16
      String@11..16
        Ident@11..16 "count"
    Ascii40@16..17 "("
    Ascii42@17..18 "*"
    Ascii41@18..19 ")"
    Whitespace@19..20 " "
    As@20..22 "AS"
    Whitespace@22..23 " "
    Ident@23..33 "unfiltered"
  Ascii44@33..34 ","
  Newline@34..35 "\n"
  Whitespace@35..39 "    "
  ResTarget@39..80
    FuncCall@39..68
      String@39..44
        Ident@39..44 "count"
      Ascii40@44..45 "("
      Ascii42@45..46 "*"
      Ascii41@46..47 ")"
      Whitespace@47..48 " "
      Filter@48..54 "FILTER"
      Whitespace@54..55 " "
      Ascii40@55..56 "("
      Where@56..61 "WHERE"
      Whitespace@61..62 " "
      AExpr@62..67
        ColumnRef@62..63
          String@62..63
            Ident@62..63 "i"
        Whitespace@63..64 " "
        String@64..65
          Ascii60@64..65 "<"
        Whitespace@65..66 " "
        AConst@66..67
          Integer@66..67
            Iconst@66..67 "5"
      Ascii41@67..68 ")"
    Whitespace@68..69 " "
    As@69..71 "AS"
    Whitespace@71..72 " "
    Ident@72..80 "filtered"
  Newline@80..81 "\n"
  From@81..85 "FROM"
  Whitespace@85..86 " "
  RangeFunction@86..115
    List@86..107
      FuncCall@86..107
        String@86..101
          Ident@86..101 "generate_series"
        Ascii40@101..102 "("
        AConst@102..103
          Integer@102..103
            Iconst@102..103 "1"
        Ascii44@103..104 ","
        AConst@104..106
          Integer@104..106
            Iconst@104..106 "10"
        Ascii41@106..107 ")"
    Whitespace@107..108 " "
    As@108..110 "AS"
    Whitespace@110..111 " "
    Alias@111..115
      Ident@111..112 "s"
      Ascii40@112..113 "("
      String@113..114
        Ident@113..114 "i"
      Ascii41@114..115 ")"
  Ascii59@115..116 ";"

