crates/parser/tests/snapshots/statements/valid/0016.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "SELECT * FROM tbl WHERE a COLLATE \"C\" > 'foo';\n"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ident@14..17 "tbl"
  Whitespace@17..18 " "
  Where@18..23 "WHERE"
  Whitespace@23..24 " "
  Ident@24..25 "a"
  Whitespace@25..26 " "
  Collate@26..33 "COLLATE"
  Whitespace@33..34 " "
  Ident@34..37 "\"C\""
  Whitespace@37..38 " "
  Ascii62@38..39 ">"
  Whitespace@39..40 " "
  Sconst@40..45 "'foo'"
  Ascii59@45..46 ";"
  Newline@46..47 "\n"

