crates/parser/tests/snapshots/statements/valid/0022.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE products (\n    product_no integer,\n    name text,\n    price numeric DEFAULT 9.99\n);\n"
---
CreateStmt@0..97
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  Ident@13..21 "products"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  Newline@23..24 "\n"
  Whitespace@24..28 "    "
  Ident@28..38 "product_no"
  Whitespace@38..39 " "
  Integer@39..46 "integer"
  Ascii44@46..47 ","
  Newline@47..48 "\n"
  Whitespace@48..52 "    "
  NameP@52..56 "name"
  Whitespace@56..57 " "
  TextP@57..61 "text"
  Ascii44@61..62 ","
  Newline@62..63 "\n"
  Whitespace@63..67 "    "
  Ident@67..72 "price"
  Whitespace@72..73 " "
  Numeric@73..80 "numeric"
  Whitespace@80..81 " "
  Default@81..88 "DEFAULT"
  Whitespace@88..89 " "
  Fconst@89..93 "9.99"
  Newline@93..94 "\n"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"
  Newline@96..97 "\n"

